# vUberdns

./: .gitignore  CMakeLists.txt  README.md
ci/: Jenkinsfile
ci/build-alpine/: Dockerfile  Readme.md  build.sh
ci/build-debian/: Dockerfile  Readme.md
ci/debian/stretch/: Dockerfile.app  Dockerfile.build  build.sh
cmake_scripts/: add_and_run_test.cmake  external-projects.cmake
conf/: apiserver.yaml  exampe_zone.txt  example.yaml
doc/: api.md
examples/: create-zone.sh
src/dnsd/: CMakeLists.txt
src/dnsd/include/: vudnsd.h
src/dnsd/src/: main.cpp
src/dnslib/: CMakeLists.txt
src/dnslib/include/vudnslib/: AnswerBase.h  DnsConfig.h  DnsDaemon.h  HttpServer.h  LabelHeader.h  MessageHeader.h  Question.h  RdataA.h  RdataAaaa.h  RdataCname.h  RdataMx.h  RdataNs.h  RdataSoa.h  RdataTxt.h  RequestStats.h  RestHandler.h  Statistics.h  Zone.h  ZoneMgr.h  type_values.h  util.h
src/dnslib/src/: AnswerBase.cpp  DnsDaemon.cpp  DnsDaemonImpl.cpp  DnsDaemonImpl.h  HttpServer.cpp  RestHandler.cpp  Zone.cpp  ZoneMemoryImpl.cpp  ZoneMemoryImpl.h  ZoneMgr.cpp  ZoneMgrJson.cpp  ZoneMgrJson.h  ZoneMgrMemory.cpp  ZoneMgrMemory.h  util.cpp
